--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV = 'development'
 
 PORT = 7000
+
+MONGO_URI = mongodb+srv://sanju1234:sanju1234@cluster0.odtorcv.mongodb.net/mgmt_db?retryWrites=true&w=majority&appName=Cluster0y
